sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:15: error: not found: value ecart
ecart = (ecart.toDouble / 1.3).toInt
^AlgCombSort:16: error: not found: value ecart
ecart=getNombreValeurs()
^AlgCombSort:21: error: not found: value inverse
		inverse=false
                ^AlgCombSort:22: error: not found: value ecart
		if(ecart>1)
                   ^AlgCombSort:24: error: not found: value ecart
		ecart=ecart/1.3
                ^AlgCombSort:26: error: not found: value ecart
			while(i+ecart<getNombreValeurs())
                                ^AlgCombSort:31: error: not found: value inverse
				inverse = true
                                ^AlgCombSort:37: error: not found: value ecart
	}while(ecart>1 || inverse=true)
               ^